2008-05-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2008-05-09  Catherine Moore  <clm@codesourcery.com>

	* config/tc-mips.c (mips_frob_file): Don't match MIPS16 relocs
	with non-MIPS16 relocs.

2008-05-09  Chao-ying Fu  <fu@mips.com>

	* config/tc-mips.c (md_begin): Use strncmp to compare TARGET_OS, in
	case that some characters append at the end of the name.
	(mips_ip): Likewise.
	(s_change_sec): Likewise.
	(md_section_align): Likewise.

2008-05-07  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xtensa_create_property_segments): Use
	xtensa_make_property_section instead of xtensa_get_property_section.
	(xtensa_create_xproperty_segments): Likewise.

2008-05-02  H.J. Lu  <hongjiu.lu@intel.com>

	* NEWS: Mention XSAVE, EPT and MOVBE.

	* config/tc-i386.c (cpu_arch): Add .movbe and .ept.
	(md_show_usage): Add .movbe and .ept.

	* doc/c-i386.texi: Add movbe and ept to -march=.  Document
	.movbe and .ept.

2008-04-29  David S. Miller  <davem@davemloft.net>

	* config/tc-sparc.c (v9a_asr_table): Fix order of softint entries.

2008-04-28  Adam Nemet  <anemet@caviumnetworks.com>

	* config/tc-mips.c (file_mips_soft_float, file_mips_single_float):
	New statics.
	(OPTION_ELF_BASE): Make room for new option macros.
	(OPTION_SOFT_FLOAT, OPTION_HARD_FLOAT, OPTION_SINGLE_FLOAT,
	OPTION_DOUBLE_FLOAT): New option macros.
	(md_longopts): Add msoft-float, mhard-float, msingle-float and
	mdouble-float.
	(md_parse_option): Handle OPTION_SINGLE_FLOAT,
	OPTION_DOUBLE_FLOAT, OPTION_SOFT_FLOAT and OPTION_HARD_FLOAT.
	(md_show_usage): Add -msoft-float, -mhard-float, -msingle-float
	and -mdouble-float.
	(struct mips_set_options): New fields soft_float and single_float.
	(mips_opts): Initialized them.  Add comment for each field
	initializer.
	(mips_after_parse_args): Set them based on file_mips_soft_float
	and file_mips_single_float.